src/gen/AngularParser.java
// Generated from C:/Users/Anwar AL-Oklah/IdeaProjects/Compiler2/src/AngularParser.g4 by ANTLR 4.13.2
package gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class AngularParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PUBLIC=1, PRIVATE=2, INT=3, SEMI=4, LET=5, CONST=6, FUNCTION=7, CLASS=8, 
		CONSTRUCTOR=9, INTERFACE=10, IMPORT=11, FROM=12, EXPORT=13, AT=14, TRUE=15, 
		FALSE=16, OF=17, ANY=18, THIS=19, AT_COMPONENT=20, SELECTOR=21, STANDALONE=22, 
		TEMPLATE=23, STYLES=24, STYLE=25, DIV_TAG=26, P_TAG=27, IMG_TAG=28, H2_TAG=29, 
		H1_TAG=30, H3_TAG=31, BUTTON=32, NAV=33, FORM=34, INPUT=35, TEXTAREA=36, 
		HTML_TAG_OPEN=37, HTML_TAG_CLOSE=38, HTML_TAG_END=39, HTML_SELF_CLOSING=40, 
		ADD=41, SUB=42, MULT=43, DIV=44, PIPE=45, DOT=46, ARRAY_START=47, ARRAY_END=48, 
		LBRACE=49, RBRACE=50, LPAREN=51, RPAREN=52, COLON=53, COMMA=54, EQUAL=55, 
		EQUALD=56, BACKTICK=57, COLOR=58, BACKGROUND=59, FONT_SIZE=60, FONT_WEIGHT=61, 
		WIDTH=62, HEIGHT=63, DISPLAY=64, POSITION=65, MARGIN=66, PADDING=67, BORDER=68, 
		BORDER_RADIUS=69, BOX_SHADOW=70, CURSOR=71, OBJECT_FIT=72, TRANSITION=73, 
		TRANSFORM=74, OUTLINE=75, TEXT_ALIGN=76, FLEX_WRAP=77, GAP=78, CSS_UNIT=79, 
		CSS_COLOR_HEX=80, CSS_KEYWORD=81, LINEAR_GRADIENT=82, ALL=83, FOCUS=84, 
		HOVER=85, SUBMIT=86, LBRACKET=87, RBRACKET=88, ASTERISK=89, COLON_SELECTOR=90, 
		IMPORTS=91, TYPE=92, PLACEHOLDER=93, ROWS=94, REQUIRED_ATTR=95, BINDING=96, 
		TWO_WAY_BINDING=97, PROPERTY_BINDING=98, Alt=99, Src=100, STYLE_ATTR=101, 
		NG_FOR=102, NG_IF=103, CLICK_EVENT=104, NG_SUBMIT_EVENT=105, StringLiteral=106, 
		NumberLiteral=107, BooleanLiteral=108, HASH_SELECTOR=109, Identifier=110, 
		TO=111, STRING=112, NUMBER=113, BOOLEAN=114, WS=115, COMMENT=116, LINE_COMMENT=117, 
		HTML_COMMENT=118, DOT_DOT=119, NULL=120, DIRECTIVE=121;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_assignment = 2, RULE_importStatement = 3, 
		RULE_importClause = 4, RULE_importSpecifier = 5, RULE_componentDefinition = 6, 
		RULE_decorator = 7, RULE_componentPropertyList = 8, RULE_componentProperty = 9, 
		RULE_styles = 10, RULE_styleRule = 11, RULE_cssSelector = 12, RULE_cssDeclaration = 13, 
		RULE_cssProperty = 14, RULE_cssValue = 15, RULE_template = 16, RULE_htmlContent = 17, 
		RULE_interpolation = 18, RULE_htmlElement = 19, RULE_formElement = 20, 
		RULE_divElement = 21, RULE_buttonElement = 22, RULE_navElement = 23, RULE_pElement = 24, 
		RULE_h2Element = 25, RULE_imgElement = 26, RULE_inputElement = 27, RULE_textareaElement = 28, 
		RULE_htmlAttributes = 29, RULE_angularDirective = 30, RULE_angularEvent = 31, 
		RULE_angularBinding = 32, RULE_styleAttribute = 33, RULE_srcAttribute = 34, 
		RULE_altAttribute = 35, RULE_formAttribute = 36, RULE_variableStatement = 37, 
		RULE_array = 38, RULE_arrayElements = 39, RULE_arrayElement = 40, RULE_object = 41, 
		RULE_property = 42, RULE_value = 43, RULE_type = 44, RULE_classDeclaration = 45, 
		RULE_classBody = 46, RULE_functionDeclaration = 47, RULE_constructorDeclaration = 48, 
		RULE_interfaceDeclaration = 49, RULE_interfaceBody = 50, RULE_exportStatement = 51, 
		RULE_expressionList = 52, RULE_expression = 53, RULE_literal = 54, RULE_propertyBinding = 55, 
		RULE_twoWayBinding = 56, RULE_ngDirective = 57, RULE_parameterList = 58, 
		RULE_block = 59;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statement", "assignment", "importStatement", "importClause", 
			"importSpecifier", "componentDefinition", "decorator", "componentPropertyList", 
			"componentProperty", "styles", "styleRule", "cssSelector", "cssDeclaration", 
			"cssProperty", "cssValue", "template", "htmlContent", "interpolation", 
			"htmlElement", "formElement", "divElement", "buttonElement", "navElement", 
			"pElement", "h2Element", "imgElement", "inputElement", "textareaElement", 
			"htmlAttributes", "angularDirective", "angularEvent", "angularBinding", 
			"styleAttribute", "srcAttribute", "altAttribute", "formAttribute", "variableStatement", 
			"array", "arrayElements", "arrayElement", "object", "property", "value", 
			"type", "classDeclaration", "classBody", "functionDeclaration", "constructorDeclaration", 
			"interfaceDeclaration", "interfaceBody", "exportStatement", "expressionList", 
			"expression", "literal", "propertyBinding", "twoWayBinding", "ngDirective", 
			"parameterList", "block"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'public'", "'private'", "'int'", "';'", "'let'", "'const'", "'function'", 
			"'class'", "'constructor'", "'interface'", "'import'", "'from'", "'export'", 
			"'@'", "'true'", "'false'", "'of'", "'any'", "'this'", "'@Component'", 
			"'selector'", "'standalone'", "'template'", "'styles'", null, "'div'", 
			"'p'", "'img'", "'h2'", "'h1'", "'h3'", "'button'", "'nav'", "'form'", 
			"'input'", "'textarea'", "'<'", "'>'", "'</'", "'/>'", "'+'", "'-'", 
			null, "'/'", "'|'", "'.'", null, null, "'{'", "'}'", "'('", "')'", null, 
			"','", "'='", "'==='", "'`'", "'color'", "'background'", "'font-size'", 
			"'font-weight'", "'width'", "'height'", "'display'", "'position'", "'margin'", 
			"'padding'", "'border'", "'border-radius'", "'box-shadow'", "'cursor'", 
			"'object-fit'", "'transition'", "'transform'", "'outline'", "'text-align'", 
			"'flex-wrap'", "'gap'", null, null, null, "'linear-gradient'", "'all'", 
			"'focus'", "'hover'", "'submit'", null, null, null, null, "'imports'", 
			"'type'", "'placeholder'", "'rows'", "'required'", null, null, null, 
			"'alt'", "'src'", null, "'*ngFor'", "'*ngIf'", "'(click)'", null, null, 
			null, null, null, null, "'to'", "'string'", "'number'", "'boolean'", 
			null, null, null, null, "'..'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PUBLIC", "PRIVATE", "INT", "SEMI", "LET", "CONST", "FUNCTION", 
			"CLASS", "CONSTRUCTOR", "INTERFACE", "IMPORT", "FROM", "EXPORT", "AT", 
			"TRUE", "FALSE", "OF", "ANY", "THIS", "AT_COMPONENT", "SELECTOR", "STANDALONE", 
			"TEMPLATE", "STYLES", "STYLE", "DIV_TAG", "P_TAG", "IMG_TAG", "H2_TAG", 
			"H1_TAG", "H3_TAG", "BUTTON", "NAV", "FORM", "INPUT", "TEXTAREA", "HTML_TAG_OPEN", 
			"HTML_TAG_CLOSE", "HTML_TAG_END", "HTML_SELF_CLOSING", "ADD", "SUB", 
			"MULT", "DIV", "PIPE", "DOT", "ARRAY_START", "ARRAY_END", "LBRACE", "RBRACE", 
			"LPAREN", "RPAREN", "COLON", "COMMA", "EQUAL", "EQUALD", "BACKTICK", 
			"COLOR", "BACKGROUND", "FONT_SIZE", "FONT_WEIGHT", "WIDTH", "HEIGHT", 
			"DISPLAY", "POSITION", "MARGIN", "PADDING", "BORDER", "BORDER_RADIUS", 
			"BOX_SHADOW", "CURSOR", "OBJECT_FIT", "TRANSITION", "TRANSFORM", "OUTLINE", 
			"TEXT_ALIGN", "FLEX_WRAP", "GAP", "CSS_UNIT", "CSS_COLOR_HEX", "CSS_KEYWORD", 
			"LINEAR_GRADIENT", "ALL", "FOCUS", "HOVER", "SUBMIT", "LBRACKET", "RBRACKET", 
			"ASTERISK", "COLON_SELECTOR", "IMPORTS", "TYPE", "PLACEHOLDER", "ROWS", 
			"REQUIRED_ATTR", "BINDING", "TWO_WAY_BINDING", "PROPERTY_BINDING", "Alt", 
			"Src", "STYLE_ATTR", "NG_FOR", "NG_IF", "CLICK_EVENT", "NG_SUBMIT_EVENT", 
			"StringLiteral", "NumberLiteral", "BooleanLiteral", "HASH_SELECTOR", 
			"Identifier", "TO", "STRING", "NUMBER", "BOOLEAN", "WS", "COMMENT", "LINE_COMMENT", 
			"HTML_COMMENT", "DOT_DOT", "NULL", "DIRECTIVE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AngularParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AngularParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(AngularParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(120);
				statement();
				}
				}
				setState(123); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 2814749768691054L) != 0) || ((((_la - 96)) & ~0x3f) == 0 && ((1L << (_la - 96)) & 50355203L) != 0) );
			setState(125);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public ImportStatementContext importStatement() {
			return getRuleContext(ImportStatementContext.class,0);
		}
		public DecoratorContext decorator() {
			return getRuleContext(DecoratorContext.class,0);
		}
		public ComponentDefinitionContext componentDefinition() {
			return getRuleContext(ComponentDefinitionContext.class,0);
		}
		public ClassDeclarationContext classDeclaration() {
			return getRuleContext(ClassDeclarationContext.class,0);
		}
		public VariableStatementContext variableStatement() {
			return getRuleContext(VariableStatementContext.class,0);
		}
		public FunctionDeclarationContext functionDeclaration() {
			return getRuleContext(FunctionDeclarationContext.class,0);
		}
		public InterfaceDeclarationContext interfaceDeclaration() {
			return getRuleContext(InterfaceDeclarationContext.class,0);
		}
		public ExportStatementContext exportStatement() {
			return getRuleContext(ExportStatementContext.class,0);
		}
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(AngularParser.SEMI, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(141);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(127);
				importStatement();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(128);
				decorator();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(129);
				componentDefinition();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(130);
				classDeclaration();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(131);
				variableStatement();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(132);
				functionDeclaration();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(133);
				interfaceDeclaration();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(134);
				exportStatement();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(135);
				assignment();
				setState(136);
				match(SEMI);
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(138);
				expression(0);
				setState(139);
				match(SEMI);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssignmentContext extends ParserRuleContext {
		public List<TerminalNode> Identifier() { return getTokens(AngularParser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(AngularParser.Identifier, i);
		}
		public TerminalNode DOT() { return getToken(AngularParser.DOT, 0); }
		public TerminalNode EQUAL() { return getToken(AngularParser.EQUAL, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitAssignment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitAssignment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_assignment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			match(Identifier);
			setState(144);
			match(DOT);
			setState(145);
			match(Identifier);
			setState(146);
			match(EQUAL);
			setState(147);
			expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportStatementContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(AngularParser.IMPORT, 0); }
		public TerminalNode SEMI() { return getToken(AngularParser.SEMI, 0); }
		public ImportClauseContext importClause() {
			return getRuleContext(ImportClauseContext.class,0);
		}
		public TerminalNode FROM() { return getToken(AngularParser.FROM, 0); }
		public TerminalNode StringLiteral() { return getToken(AngularParser.StringLiteral, 0); }
		public ImportStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterImportStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitImportStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitImportStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportStatementContext importStatement() throws RecognitionException {
		ImportStatementContext _localctx = new ImportStatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_importStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			match(IMPORT);
			setState(154);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LBRACE || _la==Identifier) {
				{
				setState(150);
				importClause();
				setState(151);
				match(FROM);
				setState(152);
				match(StringLiteral);
				}
			}

			setState(156);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportClauseContext extends ParserRuleContext {
		public TerminalNode LBRACE() { return getToken(AngularParser.LBRACE, 0); }
		public List<ImportSpecifierContext> importSpecifier() {
			return getRuleContexts(ImportSpecifierContext.class);
		}
		public ImportSpecifierContext importSpecifier(int i) {
			return getRuleContext(ImportSpecifierContext.class,i);
		}
		public TerminalNode RBRACE() { return getToken(AngularParser.RBRACE, 0); }
		public TerminalNode Identifier() { return getToken(AngularParser.Identifier, 0); }
		public List<TerminalNode> COMMA() { return getTokens(AngularParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(AngularParser.COMMA, i);
		}
		public ImportClauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importClause; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterImportClause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitImportClause(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitImportClause(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportClauseContext importClause() throws RecognitionException {
		ImportClauseContext _localctx = new ImportClauseContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_importClause);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(170);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LBRACE:
				{
				setState(158);
				match(LBRACE);
				setState(159);
				importSpecifier();
				setState(164);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(160);
					match(COMMA);
					setState(161);
					importSpecifier();
					}
					}
					setState(166);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(167);
				match(RBRACE);
				}
				break;
			case Identifier:
				{
				setState(169);
				match(Identifier);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportSpecifierContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(AngularParser.Identifier, 0); }
		public ImportSpecifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importSpecifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterImportSpecifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitImportSpecifier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitImportSpecifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportSpecifierContext importSpecifier() throws RecognitionException {
		ImportSpecifierContext _localctx = new ImportSpecifierContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_importSpecifier);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(172);
			match(Identifier);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComponentDefinitionContext extends ParserRuleContext {
		public DecoratorContext decorator() {
			return getRuleContext(DecoratorContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ComponentDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_componentDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterComponentDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitComponentDefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitComponentDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComponentDefinitionContext componentDefinition() throws RecognitionException {
		ComponentDefinitionContext _localctx = new ComponentDefinitionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_componentDefinition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(174);
			decorator();
			setState(175);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
